--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright 2024 Canonical Ltd.
+# Copyright 2024 Intel Corporation
 
 name: Master workflow
 
@@ -22,10 +23,23 @@ jobs:
           go-version-file: 'go.mod'
 
       - name: Build
-        run: go build
+        run: go build ./...
+
+  staticcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: WillAbides/setup-go-faster@v1.14.0
+        with:
+          go-version-file: 'go.mod'
+
+      - uses: dominikh/staticcheck-action@v1.3.1
+        with:
+          version: latest
+          install-go: false
 
   lint:
-    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
