--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -12,6 +12,7 @@ on:
 jobs:
   tag-github:
     uses: omec-project/.github/.github/workflows/tag-github.yml@main
+    secrets: inherit
 
   update-version:
     needs: tag-github
