--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,8 +6,8 @@ on:
   push:
     branches:
       - main
-    tags:
-      - v*
+    paths:
+      - "VERSION"
 
 jobs:
   tag-github:
@@ -17,9 +17,15 @@ jobs:
   update-version:
     needs: tag-github
     uses: omec-project/.github/.github/workflows/update-version.yml@main
+    with:
+      changed: ${{ needs.tag-github.outputs.changed }}
+      version: ${{ needs.tag-github.outputs.version }}
     secrets: inherit
 
   branch-release:
     needs: tag-github
     uses: omec-project/.github/.github/workflows/branch-release.yml@main
+    with:
+      release_branch: ${{ needs.tag-github.outputs.release_branch }}
+      version_branch: ${{ needs.tag-github.outputs.version_branch }}
     secrets: inherit
